--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
         <div>
             <nav>
                 <div>
-                    <h1 class="font-bold uppercase">
-                        <a href="/">The Real Dog Site</a>
+                    <h1 class="font-bold uppercase p-4 border-b border-gray-100">
+                        <a href="/">We Love Dogs</a>
                     </h1>
                 </div>
                 <ul>
@@ -33,7 +33,7 @@
                 </ul>
             </nav>
         </div> <!-- end nav -->
-        <main>
+        <main class="px-16 py-16">
             <div>
                 <a href="#">Log in</a>
                 <a href="#">Sign Up</a>
@@ -45,8 +45,8 @@
             </header>
 
             <div>
-                <h4 class="font-bold">Latest Dogs</h4>
-                <div>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Dogs</h4>
+                <div class="mt-8">
                     <!-- cards go here -->
                     <div>
                         <img src="img/cockapoo.png" alt="cockapoo" />
@@ -57,8 +57,8 @@
                     </div>
                 </div>
 
-                <h4 class="font-bold">Most Popular</h4>
-                <div>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
+                <div class="mt-8">
                     <!-- cards go here -->
 
                 </div>
