--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
         </div> <!-- end nav -->
         <main class="px-16 py-16">
             <div>
-                <a href="#">Log in</a>
-                <a href="#">Sign Up</a>
+                <a href="#" class="text-primary">Log in</a>
+                <a href="#" class="text-primary">Sign Up</a>
             </div>
 
             <header>
@@ -64,7 +64,7 @@
                 </div>
 
                 <div>
-                    <div>Load more</div>
+                    <div class="bg-secondary-100 text-secondary-200">Load more</div>
                 </div>
 
             </div>
