--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="text-gray-400">
+<body class="text-gray-400 font-body">
     <div> <!-- content wrapper -->
         <div>
             <nav>
