--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
             </nav>
         </div> <!-- end nav -->
         <main class="px-16 py-16">
-            <div>
+            <div class="flex justify-end">
                 <a href="#" class="text-primary">Log in</a>
-                <a href="#" class="text-primary">Sign Up</a>
+                <a href="#" class="text-primary ml-2">Sign Up</a>
             </div>
 
             <header>
@@ -63,7 +63,7 @@
 
                 </div>
 
-                <div>
+                <div class="flex justify-center">
                     <div class="bg-secondary-100 text-secondary-200">Load more</div>
                 </div>
 
