--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             </nav>
         </div> <!-- end nav -->
         <main class="px-16 py-16">
-            <div class="flex justify-end">
+            <div class="flex justify-center md:justify-end">
                 <a href="#" class="text-primary">Log in</a>
                 <a href="#" class="text-primary ml-2">Sign Up</a>
             </div>
