--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 </ul>
             </nav>
         </div> <!-- end nav -->
-        <main class="px-16 py-16">
+        <main class="px-16 py-16 bg-gray-100">
             <div class="flex justify-center md:justify-end">
                 <a href="#" class="text-primary">Log in</a>
                 <a href="#" class="text-primary ml-2">Sign Up</a>
@@ -48,11 +48,14 @@
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Dogs</h4>
                 <div class="mt-8">
                     <!-- cards go here -->
-                    <div>
-                        <img src="img/cockapoo.png" alt="cockapoo" />
-                        <div>
-                            <span>Cockapoo</span>
-                            <span>a dog by mario</span>
+                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                        <img src="img/cockapoo.png" alt="cockapoo" class="w-full h-32 sm:h-48 object-cover"/>
+                        <div class="m-4">
+                            <span class="font-bold">Cockapoo</span>
+                            <span class="block text-gray-500 text-sm">a dog by mario</span>
+                        </div>
+                        <div class="bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2">
+                            <span>cute: 10/10</span>
                         </div>
                     </div>
                 </div>
