add apply directive to make CSS classes

--- a/public/index.html
+++ b/public/index.html
@@ -48,13 +48,33 @@
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Dogs</h4>
                 <div class="mt-8">
                     <!-- cards go here -->
-                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                    <div class="card">
                         <img src="img/cockapoo.png" alt="cockapoo" class="w-full h-32 sm:h-48 object-cover"/>
                         <div class="m-4">
                             <span class="font-bold">Cockapoo</span>
                             <span class="block text-gray-500 text-sm">a dog by mario</span>
                         </div>
-                        <div class="bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2">
+                        <div class="badge">
+                            <span>cute: 10/10</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/poodle.png" alt="poodle" class="w-full h-32 sm:h-48 object-cover"/>
+                        <div class="m-4">
+                            <span class="font-bold">Poodle</span>
+                            <span class="block text-gray-500 text-sm">a dog by ken</span>
+                        </div>
+                        <div class="badge">
+                            <span>cute: 8/10</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/beagle.png" alt="beagle" class="w-full h-32 sm:h-48 object-cover"/>
+                        <div class="m-4">
+                            <span class="font-bold">Beagle</span>
+                            <span class="block text-gray-500 text-sm">a dog by joe</span>
+                        </div>
+                        <div class="badge">
                             <span>cute: 10/10</span>
                         </div>
                     </div>
