add responsive grid layout

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="text-gray-400 font-body">
-    <div> <!-- content wrapper -->
-        <div>
+    <div class="grid md:grid-cols-3"> <!-- content wrapper -->
+        <div class="md:col-span-1">
             <nav>
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
@@ -33,7 +33,7 @@
                 </ul>
             </nav>
         </div> <!-- end nav -->
-        <main class="px-16 py-16 bg-gray-100">
+        <main class="px-16 py-16 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end">
                 <a href="#" class="text-primary">Log in</a>
                 <a href="#" class="text-primary ml-2">Sign Up</a>
@@ -46,7 +46,7 @@
 
             <div>
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Dogs</h4>
-                <div class="mt-8">
+                <div class="mt-8 grid lg:grid-cols-3 gap-10">
                     <!-- cards go here -->
                     <div class="card">
                         <img src="img/cockapoo.png" alt="cockapoo" class="w-full h-32 sm:h-48 object-cover"/>
