--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,17 @@
                 </div>
                 <ul>
                     <li class="font-bold">
-                        <a href="/">
+                        <a href="/" class="button">
                             <span>Home</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/">
+                        <a href="/" class="button">
                             <span>About</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/">
+                        <a href="/" class="button">
                             <span>Contact</span>
                         </a>
                     </li>
@@ -35,8 +35,8 @@
         </div> <!-- end nav -->
         <main class="px-16 py-16 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end">
-                <a href="#" class="text-primary">Log in</a>
-                <a href="#" class="text-primary ml-2">Sign Up</a>
+                <a href="#" class="text-primary button border-primary md:border-2">Log in</a>
+                <a href="#" class="text-primary ml-2 button border-primary md:border-2">Sign Up</a>
             </div>
 
             <header>
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="bg-secondary-100 text-secondary-200">Load more</div>
+                    <div class="bg-secondary-100 text-secondary-200 button">Load more</div>
                 </div>
 
             </div>
