--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             <nav>
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                        <a href="/">We Love Dogs</a>
+                        <a href="/" class="hover:text-gray-700">We Love Dogs</a>
                     </h1>
                 </div>
                 <ul>
@@ -44,8 +44,8 @@
         </div> <!-- end nav -->
         <main class="px-16 py-16 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end">
-                <a href="#" class="text-primary button border-primary md:border-2">Log in</a>
-                <a href="#" class="text-primary ml-2 button border-primary md:border-2">Sign Up</a>
+                <a href="#" class="text-primary button border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
+                <a href="#" class="text-primary ml-2 button border-primary md:border-2 hover:bg-primary hover:text-white">Sign Up</a>
             </div>
 
             <header>
@@ -57,7 +57,7 @@
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Dogs</h4>
                 <div class="mt-8 grid lg:grid-cols-3 gap-10">
                     <!-- cards go here -->
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img src="img/cockapoo.png" alt="cockapoo" class="w-full h-32 sm:h-48 object-cover"/>
                         <div class="m-4">
                             <span class="font-bold">Cockapoo</span>
@@ -70,7 +70,7 @@
                             <span>cute: 10/10</span>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img src="img/poodle.png" alt="poodle" class="w-full h-32 sm:h-48 object-cover"/>
                         <div class="m-4">
                             <span class="font-bold">Poodle</span>
@@ -83,7 +83,7 @@
                             <span>cute: 8/10</span>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img src="img/beagle.png" alt="beagle" class="w-full h-32 sm:h-48 object-cover"/>
                         <div class="m-4">
                             <span class="font-bold">Beagle</span>
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="bg-secondary-100 text-secondary-200 button">Load more</div>
+                    <div class="bg-secondary-100 text-secondary-200 button hover:shadow-inner">Load more</div>
                 </div>
 
             </div>
