--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,8 @@
         </div> <!-- end nav -->
         <main class="px-16 py-16 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end">
-                <a href="#" class="text-primary button border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
-                <a href="#" class="text-primary ml-2 button border-primary md:border-2 hover:bg-primary hover:text-white">Sign Up</a>
+                <a href="#" class="text-primary button border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Log in</a>
+                <a href="#" class="text-primary ml-2 button border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Sign Up</a>
             </div>
 
             <header>
@@ -110,7 +110,8 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="bg-secondary-100 text-secondary-200 button hover:shadow-inner">Load more</div>
+                    <div class="bg-secondary-100 text-secondary-200 button hover:shadow-inner transform
+                        hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">Load more</div>
                 </div>
 
             </div>
